# Back-To-CP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CodeChef/: ABPLUSC.cpp  MVCOIN.cpp  ONEORALL.cpp  PHYSICS.cpp  SRTP.cpp  TRICOIN.cpp
CodeChef/MASHUP CONTEST 8 BY DUONGTB/: ARMTRN.cpp  CHAIRS.cpp  TSTROBOT.cpp
Codeforces/A/: 1003A.cpp  1256A.cpp  1283A.cpp  1294A.cpp  1311A.cpp  1348A.cpp  1355A.cpp  1371A.cpp  1373A.cpp  1421A.cpp  1426A.cpp  1454A.cpp  1472A.cpp  1535A.cpp  1542A.cpp  1551A.cpp  1619A.cpp  1698A.cpp  1791A.cpp  1807A.cpp  1831A.cpp  1841A.cpp  1843A.cpp  1845A.cpp  1868A.cpp  1881A.cpp  1884A.cpp  1886A.cpp  1890A.cpp  1899A.cpp  1900A.cpp  1901A.cpp  1903A.cpp  1907A.cpp  1914A.cpp  1915A.cpp  1918A.cpp  1919A.cpp  1922A.cpp  1925A.cpp  (+54 more)
Codeforces/B/: 1097B.cpp  1213B.cpp  1312B.cpp  1365B.cpp  1374B .cpp  1391B.cpp  1399B.cpp  1427B.cpp  1469B.cpp  1475B.cpp  1478B.cpp  1481B.cpp  1520B.cpp  1633B.cpp  1650B.cpp  1660B.cpp  1676B.cpp  1702C.cpp  1703B.cpp  1722B.cpp  1807B.cpp  1836B.cpp  1843B.cpp  1846B.cpp  1851B.cpp  1855B.cpp  1857B.cpp  1859B.cpp  1883B.cpp  1886B.cpp  1913B.cpp  1914B.cpp  1915B.cpp  1919B.cpp  1921B.cpp  1926B.cpp  1927B.cpp  1931B.cpp  1933B.cpp  1941B.cpp  (+23 more)
Codeforces/C/: 1272C.cpp  1352C.cpp  1374C.cpp  1537C.cpp  1560C.cpp  1783C.cpp  1807C.cpp  1840C.cpp  1843C.cpp  1883C.cpp  1915C.cpp  1921C.cpp  1927C.cpp  1931C.cpp  1941C.cpp  1950C.cpp  1985C.cpp  1992C.cpp  1999C.cpp  2008C.cpp  2044C.cpp  545C.cpp  550C.cpp
Codeforces/D/: 1335D.cpp  1850D.cpp  1915D.cpp  1972D.cpp  1985D.cpp
Codeforces/E/: 1873E.cpp  (+1 more)
HackerRank/: main.cpp
LeetCode/: main.cpp
(+52 files in other folders)
