cmake_minimum_required(VERSION 3.23)
project(Thang_11_Di_Hue)

set(CMAKE_CXX_STANDARD 17)

add_executable(Thang_11_Di_Hue main.cpp
        Codeforces/A/1950A.cpp
        Codeforces/A/1915A.cpp
        Codeforces/A/1985A.cpp
        Codeforces/A/1926A.cpp
        Codeforces/A/1899A.cpp
        Codeforces/B/1985B.cpp
        Codeforces/A/1971A.cpp
        Codeforces/A/1927A.cpp
        Codeforces/A/1999A.cpp
        Codeforces/A/1941A.cpp
        Codeforces/A/1955A.cpp)
